<resources>
    <string name="app_name">TA_Hiring_Internshala</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="register">Register</string>
    <string name="splash_logo_name">SAINGame</string>
    <string name="login_name">Login</string>
    <string name="login_user">USERNAME</string>
    <string name="login_pass">PASSWORD</string>
    <string name="login_sub">LOGIN</string>
    <string name="login_for_pass">Forget Password</string>
    <string name="login_reg">Register Now</string>
    <string name="empty_todo">TODO</string>
    <string name="hint">abcd@domain.com</string>
    <string name="username">username</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password_sub">RESET</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="register_sub">SIGN UP</string>
</resources>