<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".fragment.Login">


    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_name"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/liley1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/login_user"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/lUsername"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints="yes"
                    android:background="@drawable/tb_bg"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="30dp"
                    android:text="@string/login_pass"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/lPass"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints="yes"
                    android:background="@drawable/tb_bg"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/lBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/tb_bg"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/login_sub"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/rBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/tb_bg"
                android:fontFamily="sans-serif-medium"
                android:text="@string/register_sub"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>