<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginTop="11dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="1dp"
    android:id="@+id/card_view"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/workshopName"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="58dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/event_name"
                android:textSize="32sp"/>

            <Button
                android:id="@+id/applyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textSize="10sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/workshopDate"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/date" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>